--- a/index.html
+++ b/index.html
@@ -31,30 +31,85 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="lambdajudge-" class="anchor" href="#lambdajudge-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lambdajudge <a href="https://travis-ci.org/venugangireddy/Lambdajudge"><img src="https://travis-ci.org/venugangireddy/Lambdajudge.svg?branch=master" alt="Build Status"></a>
+</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Lambdajudge is a library to easily host programming contests in haskell. This work is done as a project in <a href="http://cse.iitk.ac.in/users/ppk/teaching/Functional-Programming/index.html">Functional Programming course</a>.</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h4>
+<a id="team-members" class="anchor" href="#team-members" aria-hidden="true"><span class="octicon octicon-link"></span></a>Team members</h4>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>
+<a href="https://github.com/ankitku">Ankit Kumar</a> (15111010)</li>
+<li>
+<a href="https://github.com/venugangireddy">Venugopal Reddy</a> (14111043)</li>
+<li>
+<a href="https://github.com/imhobo">Safal Pandita</a> (15111040)</li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span class="octicon octicon-link"></span></a>How to use</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<div class="highlight highlight-source-haskell"><pre><span class="pl-k">import</span> <span class="pl-c1">Lambdajudge</span>
+
+<span class="pl-c">-- | Check if mueval is present, as lambdajudge needs mueval executable to run</span>
+check = muevalAvlbl <span class="pl-c">--should return true. Only then can proceed using other functions.</span>
+
+<span class="pl-c">-- | creating a sample Contest. input and output files are in the project directory</span>
+<span class="pl-en">createContest</span> <span class="pl-k">::</span> <span class="pl-c1">IO</span> <span class="pl-k">Problem</span>
+createContest = <span class="pl-k">do</span>
+    <span class="pl-k">let</span> dir = <span class="pl-s"><span class="pl-pds">"</span>test/contest1/Q1/<span class="pl-pds">"</span></span>
+    <span class="pl-c">--Creating first problem of contest</span>
+    testCase1_1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>input00.txt<span class="pl-pds">"</span></span>)
+    output1_1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>output00.txt<span class="pl-pds">"</span></span>)
+    testCase2_2 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>input02.txt<span class="pl-pds">"</span></span>)
+    output2_2 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>output02.txt<span class="pl-pds">"</span></span>)
+    problemStatement1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>ProblemStatement1<span class="pl-pds">"</span></span>)
+    problemSetterCode1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>Solution1/Solution.hs<span class="pl-pds">"</span></span>)
+    <span class="pl-c">--Creating second problem of contest</span>
+    testCase2_1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>input10.txt<span class="pl-pds">"</span></span>)
+    output2_1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>output10.txt<span class="pl-pds">"</span></span>)
+    testCase2_1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>input12.txt<span class="pl-pds">"</span></span>)
+    output2_1 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>output12.txt<span class="pl-pds">"</span></span>)
+    problemStatement2 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>ProblemStatement2<span class="pl-pds">"</span></span>)
+    problemSetterCode2 &lt;- getFileContents (dir &lt;/&gt; <span class="pl-s"><span class="pl-pds">"</span>Solution2/Solution.hs<span class="pl-pds">"</span></span>)
+    <span class="pl-c">-- can further repeat to include more problems.</span>
+    <span class="pl-k">let</span> contest = [<span class="pl-c1">Problem</span> problemStatement1 [(testCase1_1,output1_1),(testCase1_2,output1_2<span class="pl-k">)]</span> problemSetterCode1 <span class="pl-c1">5</span>, 
+                   <span class="pl-c1">Problem</span> problemStatement2 [(testCase2_1,output2_1),(testCase2_2,output2_2<span class="pl-k">)]</span> problemSetterCode2 <span class="pl-c1">3</span>]
+    <span class="pl-c1">return</span> contest
+
+<span class="pl-c">---run submitted solution on problem testcase</span>
+evaluate = <span class="pl-k">do</span>
+            prob1 &lt;- createContest!!<span class="pl-c1">1</span> <span class="pl-c">-- evaluating on first problem of the contest</span>
+            runLJMonad $ gradeSubmission prob1 <span class="pl-s"><span class="pl-pds">"</span>SubmittedSolution.hs<span class="pl-pds">"</span></span></pre></div>
+
+<h3>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h3>
+
+<ul>
+<li>Submitted code is run in mueval, which avoids attacks like unsafePerformIO etc..</li>
+<li>Only runs the "solution" function of type  String -&gt; String. Hence, code has to be pure. So Type safety ensures     safety of execution.</li>
+<li>provides logging and error handling for debugging purposes</li>
+</ul>
+
+<h3>
+<a id="install-from-hackage" class="anchor" href="#install-from-hackage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install from Hackage:</h3>
+
+<div class="highlight highlight-source-shell"><pre>    $ cabal install Lambdajudge</pre></div>
+
+<h3>
+<a id="install-from-unpacked-release-tarball-or-source-repo" class="anchor" href="#install-from-unpacked-release-tarball-or-source-repo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install from unpacked release tarball or source repo:</h3>
+
+<div class="highlight highlight-source-shell"><pre>    $ <span class="pl-c1">cd</span> Lambdajudge
+    $ cabal install</pre></div>
+
+<h3>
+<a id="just-play-with-it-without-installing" class="anchor" href="#just-play-with-it-without-installing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Just play with it without installing:</h3>
+
+<div class="highlight highlight-source-shell"><pre>    $ cabal build
+    $ cabal repl</pre></div>
       </section>
     </div>
 
